check token valid before access view pag

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -71,7 +71,11 @@
               <!-- /.col -->
             </div>
           </form>
-
+          <!-- <div class="social-auth-links text-center mt-2 mb-3">
+            <a href="oauth2/authorization/google" class="btn btn-block btn-danger">
+              <i class="fab fa-google-plus mr-2"></i> Đăng nhập bằng Google
+            </a>
+          </div> -->
           <p class="mb-1 pt-2">
             <a href="forgot-password.html">Quên mật khẩu</a>
           </p>
