--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -865,10 +865,9 @@
               <span class="info-box-icon bg-info elevation-1"><i class="fas fa-cog"></i></span>
 
               <div class="info-box-content">
-                <span class="info-box-text">CPU Traffic</span>
-                <span class="info-box-number">
-                  10
-                  <small>%</small>
+                <span class="info-box-text">User quanity</span>
+                <span id="user_quantity" class="info-box-number">
+                  number
                 </span>
               </div>
               <!-- /.info-box-content -->
