--- a/src/main/resources/templates/404.html
+++ b/src/main/resources/templates/404.html
@@ -334,7 +334,7 @@
             <div class="box__description-text">It seems like we couldn't find the page you were looking for</div>
           </div>
           
-          <a href="/" class="box__button">Go back</a>
+          <a href="/static" class="box__button">Go back</a>
           
         </div>
         
