update service and design option entity

--- a/src/main/resources/templates/pages/examples/project-add.html
+++ b/src/main/resources/templates/pages/examples/project-add.html
@@ -872,10 +872,10 @@
               <div class="form-group">
                 <label for="inputStatus">Status</label>
                 <select id="inputStatus" class="form-control custom-select">
-                  <option selected disabled>Select one</option>
-                  <option>On Hold</option>
-                  <option>Canceled</option>
-                  <option>Success</option>
+                  <options selected disabled>Select one</options>
+                  <options>On Hold</options>
+                  <options>Canceled</options>
+                  <options>Success</options>
                 </select>
               </div>
               <div class="form-group">
