--- a/src/main/resources/templates/pages/examples/project-edit.html
+++ b/src/main/resources/templates/pages/examples/project-edit.html
@@ -873,10 +873,10 @@
               <div class="form-group">
                 <label for="inputStatus">Status</label>
                 <select id="inputStatus" class="form-control custom-select">
-                  <option disabled>Select one</option>
-                  <option>On Hold</option>
-                  <option>Canceled</option>
-                  <option selected>Success</option>
+                  <options disabled>Select one</options>
+                  <options>On Hold</options>
+                  <options>Canceled</options>
+                  <options selected>Success</options>
                 </select>
               </div>
               <div class="form-group">
