--- a/src/main/resources/templates/pages/forms/general.html
+++ b/src/main/resources/templates/pages/forms/general.html
@@ -919,25 +919,25 @@
                 <div class="form-group">
                   <label for="exampleSelectBorder">Bottom Border only <code>.form-control-border</code></label>
                   <select class="custom-select form-control-border" id="exampleSelectBorder">
-                    <option>Value 1</option>
-                    <option>Value 2</option>
-                    <option>Value 3</option>
+                    <options>Value 1</options>
+                    <options>Value 2</options>
+                    <options>Value 3</options>
                   </select>
                 </div>
                 <div class="form-group">
                   <label for="exampleSelectBorderWidth2">Bottom Border only <code>.form-control-border.border-width-2</code></label>
                   <select class="custom-select form-control-border border-width-2" id="exampleSelectBorderWidth2">
-                    <option>Value 1</option>
-                    <option>Value 2</option>
-                    <option>Value 3</option>
+                    <options>Value 1</options>
+                    <options>Value 2</options>
+                    <options>Value 3</options>
                   </select>
                 </div>
                 <div class="form-group">
                   <label for="exampleSelectRounded0">Flat <code>.rounded-0</code></label>
                   <select class="custom-select rounded-0" id="exampleSelectRounded0">
-                    <option>Value 1</option>
-                    <option>Value 2</option>
-                    <option>Value 3</option>
+                    <options>Value 1</options>
+                    <options>Value 2</options>
+                    <options>Value 3</options>
                   </select>
                 </div>
               </div>
@@ -1255,11 +1255,11 @@
                       <div class="form-group">
                         <label>Select</label>
                         <select class="form-control">
-                          <option>option 1</option>
-                          <option>option 2</option>
-                          <option>option 3</option>
-                          <option>option 4</option>
-                          <option>option 5</option>
+                          <options>options 1</options>
+                          <options>options 2</options>
+                          <options>options 3</options>
+                          <options>options 4</options>
+                          <options>options 5</options>
                         </select>
                       </div>
                     </div>
@@ -1267,11 +1267,11 @@
                       <div class="form-group">
                         <label>Select Disabled</label>
                         <select class="form-control" disabled>
-                          <option>option 1</option>
-                          <option>option 2</option>
-                          <option>option 3</option>
-                          <option>option 4</option>
-                          <option>option 5</option>
+                          <options>options 1</options>
+                          <options>options 2</options>
+                          <options>options 3</options>
+                          <options>options 4</options>
+                          <options>options 5</options>
                         </select>
                       </div>
                     </div>
@@ -1283,11 +1283,11 @@
                       <div class="form-group">
                         <label>Select Multiple</label>
                         <select multiple class="form-control">
-                          <option>option 1</option>
-                          <option>option 2</option>
-                          <option>option 3</option>
-                          <option>option 4</option>
-                          <option>option 5</option>
+                          <options>options 1</options>
+                          <options>options 2</options>
+                          <options>options 3</options>
+                          <options>options 4</options>
+                          <options>options 5</options>
                         </select>
                       </div>
                     </div>
@@ -1295,11 +1295,11 @@
                       <div class="form-group">
                         <label>Select Multiple Disabled</label>
                         <select multiple class="form-control" disabled>
-                          <option>option 1</option>
-                          <option>option 2</option>
-                          <option>option 3</option>
-                          <option>option 4</option>
-                          <option>option 5</option>
+                          <options>options 1</options>
+                          <options>options 2</options>
+                          <options>options 3</options>
+                          <options>options 4</options>
+                          <options>options 5</options>
                         </select>
                       </div>
                     </div>
@@ -1376,11 +1376,11 @@
                       <div class="form-group">
                         <label>Custom Select</label>
                         <select class="custom-select">
-                          <option>option 1</option>
-                          <option>option 2</option>
-                          <option>option 3</option>
-                          <option>option 4</option>
-                          <option>option 5</option>
+                          <options>options 1</options>
+                          <options>options 2</options>
+                          <options>options 3</options>
+                          <options>options 4</options>
+                          <options>options 5</options>
                         </select>
                       </div>
                     </div>
@@ -1388,11 +1388,11 @@
                       <div class="form-group">
                         <label>Custom Select Disabled</label>
                         <select class="custom-select" disabled>
-                          <option>option 1</option>
-                          <option>option 2</option>
-                          <option>option 3</option>
-                          <option>option 4</option>
-                          <option>option 5</option>
+                          <options>options 1</options>
+                          <options>options 2</options>
+                          <options>options 3</options>
+                          <options>options 4</options>
+                          <options>options 5</options>
                         </select>
                       </div>
                     </div>
@@ -1404,11 +1404,11 @@
                       <div class="form-group">
                         <label>Custom Select Multiple</label>
                         <select multiple class="custom-select">
-                          <option>option 1</option>
-                          <option>option 2</option>
-                          <option>option 3</option>
-                          <option>option 4</option>
-                          <option>option 5</option>
+                          <options>options 1</options>
+                          <options>options 2</options>
+                          <options>options 3</options>
+                          <options>options 4</options>
+                          <options>options 5</options>
                         </select>
                       </div>
                     </div>
@@ -1416,11 +1416,11 @@
                       <div class="form-group">
                         <label>Custom Select Multiple Disabled</label>
                         <select multiple class="custom-select" disabled>
-                          <option>option 1</option>
-                          <option>option 2</option>
-                          <option>option 3</option>
-                          <option>option 4</option>
-                          <option>option 5</option>
+                          <options>options 1</options>
+                          <options>options 2</options>
+                          <options>options 3</options>
+                          <options>options 4</options>
+                          <options>options 5</options>
                         </select>
                       </div>
                     </div>
