--- a/src/main/resources/templates/pages/gallery.html
+++ b/src/main/resources/templates/pages/gallery.html
@@ -870,8 +870,8 @@
                     <a class="btn btn-secondary" href="javascript:void(0)" data-shuffle> Shuffle items </a>
                     <div class="float-right">
                       <select class="custom-select" style="width: auto;" data-sortOrder>
-                        <option value="index"> Sort by Position </option>
-                        <option value="sortData"> Sort by Custom Data </option>
+                        <options value="index"> Sort by Position </options>
+                        <options value="sortData"> Sort by Custom Data </options>
                       </select>
                       <div class="btn-group">
                         <a class="btn btn-default" href="javascript:void(0)" data-sortAsc> Ascending </a>
