--- a/src/main/resources/templates/pages/forms/advanced.html
+++ b/src/main/resources/templates/pages/forms/advanced.html
@@ -887,26 +887,26 @@
                 <div class="form-group">
                   <label>Minimal</label>
                   <select class="form-control select2" style="width: 100%;">
-                    <option selected="selected">Alabama</option>
-                    <option>Alaska</option>
-                    <option>California</option>
-                    <option>Delaware</option>
-                    <option>Tennessee</option>
-                    <option>Texas</option>
-                    <option>Washington</option>
+                    <options selected="selected">Alabama</options>
+                    <options>Alaska</options>
+                    <options>California</options>
+                    <options>Delaware</options>
+                    <options>Tennessee</options>
+                    <options>Texas</options>
+                    <options>Washington</options>
                   </select>
                 </div>
                 <!-- /.form-group -->
                 <div class="form-group">
                   <label>Disabled</label>
                   <select class="form-control select2" disabled="disabled" style="width: 100%;">
-                    <option selected="selected">Alabama</option>
-                    <option>Alaska</option>
-                    <option>California</option>
-                    <option>Delaware</option>
-                    <option>Tennessee</option>
-                    <option>Texas</option>
-                    <option>Washington</option>
+                    <options selected="selected">Alabama</options>
+                    <options>Alaska</options>
+                    <options>California</options>
+                    <options>Delaware</options>
+                    <options>Tennessee</options>
+                    <options>Texas</options>
+                    <options>Washington</options>
                   </select>
                 </div>
                 <!-- /.form-group -->
@@ -916,26 +916,26 @@
                 <div class="form-group">
                   <label>Multiple</label>
                   <select class="select2" multiple="multiple" data-placeholder="Select a State" style="width: 100%;">
-                    <option>Alabama</option>
-                    <option>Alaska</option>
-                    <option>California</option>
-                    <option>Delaware</option>
-                    <option>Tennessee</option>
-                    <option>Texas</option>
-                    <option>Washington</option>
+                    <options>Alabama</options>
+                    <options>Alaska</options>
+                    <options>California</options>
+                    <options>Delaware</options>
+                    <options>Tennessee</options>
+                    <options>Texas</options>
+                    <options>Washington</options>
                   </select>
                 </div>
                 <!-- /.form-group -->
                 <div class="form-group">
                   <label>Disabled Result</label>
                   <select class="form-control select2" style="width: 100%;">
-                    <option selected="selected">Alabama</option>
-                    <option>Alaska</option>
-                    <option disabled="disabled">California (disabled)</option>
-                    <option>Delaware</option>
-                    <option>Tennessee</option>
-                    <option>Texas</option>
-                    <option>Washington</option>
+                    <options selected="selected">Alabama</options>
+                    <options>Alaska</options>
+                    <options disabled="disabled">California (disabled)</options>
+                    <options>Delaware</options>
+                    <options>Tennessee</options>
+                    <options>Texas</options>
+                    <options>Washington</options>
                   </select>
                 </div>
                 <!-- /.form-group -->
@@ -950,13 +950,13 @@
                 <div class="form-group">
                   <label>Minimal (.select2-danger)</label>
                   <select class="form-control select2 select2-danger" data-dropdown-css-class="select2-danger" style="width: 100%;">
-                    <option selected="selected">Alabama</option>
-                    <option>Alaska</option>
-                    <option>California</option>
-                    <option>Delaware</option>
-                    <option>Tennessee</option>
-                    <option>Texas</option>
-                    <option>Washington</option>
+                    <options selected="selected">Alabama</options>
+                    <options>Alaska</options>
+                    <options>California</options>
+                    <options>Delaware</options>
+                    <options>Tennessee</options>
+                    <options>Texas</options>
+                    <options>Washington</options>
                   </select>
                 </div>
                 <!-- /.form-group -->
@@ -967,13 +967,13 @@
                   <label>Multiple (.select2-purple)</label>
                   <div class="select2-purple">
                     <select class="select2" multiple="multiple" data-placeholder="Select a State" data-dropdown-css-class="select2-purple" style="width: 100%;">
-                      <option>Alabama</option>
-                      <option>Alaska</option>
-                      <option>California</option>
-                      <option>Delaware</option>
-                      <option>Tennessee</option>
-                      <option>Texas</option>
-                      <option>Washington</option>
+                      <options>Alabama</options>
+                      <options>Alaska</options>
+                      <options>California</options>
+                      <options>Delaware</options>
+                      <options>Tennessee</options>
+                      <options>Texas</options>
+                      <options>Washington</options>
                     </select>
                   </div>
                 </div>
@@ -1012,26 +1012,26 @@
                 <div class="form-group">
                   <label>Minimal</label>
                   <select class="form-control select2bs4" style="width: 100%;">
-                    <option selected="selected">Alabama</option>
-                    <option>Alaska</option>
-                    <option>California</option>
-                    <option>Delaware</option>
-                    <option>Tennessee</option>
-                    <option>Texas</option>
-                    <option>Washington</option>
+                    <options selected="selected">Alabama</options>
+                    <options>Alaska</options>
+                    <options>California</options>
+                    <options>Delaware</options>
+                    <options>Tennessee</options>
+                    <options>Texas</options>
+                    <options>Washington</options>
                   </select>
                 </div>
                 <!-- /.form-group -->
                 <div class="form-group">
                   <label>Disabled</label>
                   <select class="form-control select2bs4" disabled="disabled" style="width: 100%;">
-                    <option selected="selected">Alabama</option>
-                    <option>Alaska</option>
-                    <option>California</option>
-                    <option>Delaware</option>
-                    <option>Tennessee</option>
-                    <option>Texas</option>
-                    <option>Washington</option>
+                    <options selected="selected">Alabama</options>
+                    <options>Alaska</options>
+                    <options>California</options>
+                    <options>Delaware</options>
+                    <options>Tennessee</options>
+                    <options>Texas</options>
+                    <options>Washington</options>
                   </select>
                 </div>
                 <!-- /.form-group -->
@@ -1042,26 +1042,26 @@
                   <label>Multiple</label>
                   <select class="select2bs4" multiple="multiple" data-placeholder="Select a State"
                           style="width: 100%;">
-                    <option>Alabama</option>
-                    <option>Alaska</option>
-                    <option>California</option>
-                    <option>Delaware</option>
-                    <option>Tennessee</option>
-                    <option>Texas</option>
-                    <option>Washington</option>
+                    <options>Alabama</options>
+                    <options>Alaska</options>
+                    <options>California</options>
+                    <options>Delaware</options>
+                    <options>Tennessee</options>
+                    <options>Texas</options>
+                    <options>Washington</options>
                   </select>
                 </div>
                 <!-- /.form-group -->
                 <div class="form-group">
                   <label>Disabled Result</label>
                   <select class="form-control select2bs4" style="width: 100%;">
-                    <option selected="selected">Alabama</option>
-                    <option>Alaska</option>
-                    <option disabled="disabled">California (disabled)</option>
-                    <option>Delaware</option>
-                    <option>Tennessee</option>
-                    <option>Texas</option>
-                    <option>Washington</option>
+                    <options selected="selected">Alabama</options>
+                    <options>Alaska</options>
+                    <options disabled="disabled">California (disabled)</options>
+                    <options>Delaware</options>
+                    <options>Tennessee</options>
+                    <options>Texas</options>
+                    <options>Washington</options>
                   </select>
                 </div>
                 <!-- /.form-group -->
@@ -1098,13 +1098,13 @@
                 <div class="form-group">
                   <label>Multiple</label>
                   <select class="duallistbox" multiple="multiple">
-                    <option selected>Alabama</option>
-                    <option>Alaska</option>
-                    <option>California</option>
-                    <option>Delaware</option>
-                    <option>Tennessee</option>
-                    <option>Texas</option>
-                    <option>Washington</option>
+                    <options selected>Alabama</options>
+                    <options>Alaska</options>
+                    <options>California</options>
+                    <options>Delaware</options>
+                    <options>Tennessee</options>
+                    <options>Texas</options>
+                    <options>Washington</options>
                   </select>
                 </div>
                 <!-- /.form-group -->
