--- a/src/main/resources/templates/pages/search/enhanced.html
+++ b/src/main/resources/templates/pages/search/enhanced.html
@@ -843,9 +843,9 @@
                                 <div class="form-group">
                                     <label>Result Type:</label>
                                     <select class="select2" multiple="multiple" data-placeholder="Any" style="width: 100%;">
-                                        <option>Text only</option>
-                                        <option>Images</option>
-                                        <option>Video</option>
+                                        <options>Text only</options>
+                                        <options>Images</options>
+                                        <options>Video</options>
                                     </select>
                                 </div>
                             </div>
@@ -853,8 +853,8 @@
                                 <div class="form-group">
                                     <label>Sort Order:</label>
                                     <select class="select2" style="width: 100%;">
-                                        <option selected>ASC</option>
-                                        <option>DESC</option>
+                                        <options selected>ASC</options>
+                                        <options>DESC</options>
                                     </select>
                                 </div>
                             </div>
@@ -862,8 +862,8 @@
                                 <div class="form-group">
                                     <label>Order By:</label>
                                     <select class="select2" style="width: 100%;">
-                                        <option selected>Title</option>
-                                        <option>Date</option>
+                                        <options selected>Title</options>
+                                        <options>Date</options>
                                     </select>
                                 </div>
                             </div>
