--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -46,7 +46,15 @@
   <!-- sidebar -->
   <div id="sidebar"></div>
   <script>
-    $("#sidebar").load("include/sidebar.html");
+    $("#sidebar").load("/include/sidebar.html", function() {
+    console.log("Sidebar loaded.");
+
+    // Khởi động lại layout AdminLTE để đảm bảo sidebar hoạt động đúng
+    if (typeof $.AdminLTE !== 'undefined') {
+      $.AdminLTE.layout.activate(); // Kích hoạt lại layout
+    }
+    $('.nav-item').Treeview('init');
+  });
   </script>
   <!-- /.sidebar -->
 
@@ -57,12 +65,12 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1 class="m-0">Dashboard v2</h1>
+            <h1 class="m-0">Dashboard</h1>
           </div><!-- /.col -->
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
               <li class="breadcrumb-item"><a href="#">Home</a></li>
-              <li class="breadcrumb-item active">Dashboard v2</li>
+              <li class="breadcrumb-item active">Dashboard</li>
             </ol>
           </div><!-- /.col -->
         </div><!-- /.row -->
@@ -942,6 +950,6 @@
 <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
 <script type="module" src="dist/js/pages/dashboard.js"></script>
 <!-- AdminLTE for demo purposes -->
-<!-- <script src="dist/js/demo.js"></script> -->
+<script src="dist/js/demo.js"></script>
 </body>
 </html>
