--- a/src/main/resources/templates/blank.html
+++ b/src/main/resources/templates/blank.html
@@ -27,6 +27,10 @@
 <body class="hold-transition sidebar-mini layout-navbar-fixed">
 <!-- Site wrapper -->
 <div class="wrapper">
+  <!-- Preloader -->
+  <div class="preloader flex-column justify-content-center align-items-center">
+    <img class="animation__wobble" src="dist/img/SpringDetailingLogo.png" alt="SpringDetailingLogo" height="250" width="250">
+  </div>
   <!-- Navbar -->
   <nav id="navbar" class="main-header navbar navbar-expand navbar-dark"></nav>
   </nav>
