--- a/src/main/resources/templates/include/sidebar.html
+++ b/src/main/resources/templates/include/sidebar.html
@@ -1,12 +1,5 @@
 <!-- Main Sidebar Container -->
-<!-- Font Awesome -->
-<link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-  integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-  crossorigin="anonymous"
-  referrerpolicy="no-referrer"
-/>
+
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
   <!-- Brand Logo -->
   <a href="/" class="brand-link">
@@ -71,7 +64,7 @@
 
         <li class="nav-item">
           <a href="#" class="nav-link" id="category-management">
-            <i class="nav-icon fas fa-gears"></i>
+            <i class="fa-solid fa-gears"></i>
             <p>
               Quản lý danh mục
               <i class="fas fa-angle-left right"></i>
@@ -80,8 +73,12 @@
           </a>
           <ul class="nav nav-treeview pl-2">
             <li class="nav-item">
-              <a href="../brand-model-management.html" class="nav-link" id="category-management_brand-model-management">
-                <i class="nav-icon fa-solid fa-database"></i>
+              <a
+                href="../brand-model-management.html"
+                class="nav-link"
+                id="category-management_brand-model-management"
+              >
+              <i class="fa-solid fa-database"></i>
                 <p>Danh mục mẫu xe</p>
               </a>
             </li>
@@ -708,8 +705,15 @@
     </nav>
     <!-- /.sidebar-menu -->
   </div>
-  <!-- /.sidebar -->
-  <script src="/include/sidebar.js"></script>
 </aside>
-<script src="/dist/js/demo.js">
-</script>
+<!-- /.sidebar -->
+ <!-- Font Awesome --><!-- Font Awesome Icons -->
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+  integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+  crossorigin="anonymous"
+  referrerpolicy="no-referrer"
+/>
+<script src="/include/sidebar.js"></script>
+<script src="/dist/js/demo.js"></script>
