--- a/src/main/resources/templates/brand-model-management.html
+++ b/src/main/resources/templates/brand-model-management.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Danh mục hãng - xe | Spring Detailing</title>
-  
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Danh mục hãng - xe | Spring Detailing</title>
+
   <!-- jQuery -->
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <!-- SweetAlert2 -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback"/>
+    href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback" />
   <!-- Font Awesome Icons -->
   <link rel="stylesheet" href="/plugins/fontawesome-free/css/all.min.css" />
   <!-- overlayScrollbars -->
-  <link
-    rel="stylesheet"
-    href="/plugins/overlayScrollbars/css/OverlayScrollbars.min.css"
-  />
+  <link rel="stylesheet" href="/plugins/overlayScrollbars/css/OverlayScrollbars.min.css" />
   <!-- DataTables -->
   <link rel="stylesheet" href="../../plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
   <link rel="stylesheet" href="../../plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
@@ -24,94 +24,127 @@
   <!-- Theme style -->
   <link rel="stylesheet" href="/dist/css/adminlte.min.css" />
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-  </head>
+</head>
 
 <body class="hold-transition sidebar-mini layout-navbar-fixed">
-<!-- Site wrapper -->
-<div class="wrapper">
+  <!-- Site wrapper -->
+  <div class="wrapper">
 
-  <!-- Preloader -->
-  <div class="preloader flex-column justify-content-center align-items-center">
-    <img class="animation__wobble" src="dist/img/SpringDetailingLogo.png" alt="SpringDetailingLogo" height="250" width="250">
-  </div>
+    <!-- Preloader -->
+    <div class="preloader flex-column justify-content-center align-items-center">
+      <img class="animation__wobble" src="dist/img/SpringDetailingLogo.png" alt="SpringDetailingLogo" height="250"
+        width="250">
+    </div>
 
-  <!-- Navbar -->
-  <nav id="navbar" class="main-header navbar navbar-expand navbar-dark"></nav>
-  </nav>
-  <script>
-    $("#navbar").load("include/navbar.html");
-  </script>
-  <!-- /.navbar -->
+    <!-- Navbar -->
+    <nav id="navbar" class="main-header navbar navbar-expand navbar-dark"></nav>
+    </nav>
+    <script>
+      $("#navbar").load("include/navbar.html");
+    </script>
+    <!-- /.navbar -->
 
-  <!-- Main Sidebar Container -->
- <!-- sidebar -->
- <div id="sidebar"></div>
- <script>
-   $("#sidebar").load("/include/sidebar.html", function() {
-   console.log("Sidebar loaded.");
-
-   // Khởi động lại layout AdminLTE để đảm bảo sidebar hoạt động đúng
-   if (typeof $.AdminLTE !== 'undefined') {
-     $.AdminLTE.layout.activate(); // Kích hoạt lại layout
-   }
-   $('.nav-item').Treeview('init');
- });
- </script>
- <!-- /.sidebar -->
-
-  <!-- Content Wrapper. Contains page content -->
-  <div class="content-wrapper">
-    <!-- Content Header (Page header) -->
-    <section class="content-header">
-      <div class="container-fluid">
-        <div class="row mb-2">
-          <div class="col-sm-6">
-            <h1>Danh mục hãng - xe</h1>
+    <!-- sidebar -->
+    <!-- Main Sidebar Container -->
+    <aside class="main-sidebar sidebar-dark-primary elevation-4">
+      <!-- Brand Logo -->
+      <a href="/" class="brand-link">
+        <img src="favicon.ico" alt="Spring Detailing Logo" class="brand-image img-circle elevation-3"
+          style="opacity: 0.8" />
+        <span class="brand-text font-weight-bold">Spring Detailing</span>
+      </a>
+      <!-- Sidebar -->
+      <div class="sidebar">
+        <!-- Sidebar user panel (optional) -->
+        <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+          <div class="image">
+            <img src="dist/img/mechanic.png" class="rounded elevation-2" alt="User Image" />
           </div>
-          <div class="col-sm-6">
-            <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item"><a href="#">Home</a></li>
-              <li class="breadcrumb-item active">Danh mục hãng - xe</li>
-            </ol>
+          <div class="info">
+            <a href="#" class="d-block">GUEST</a>
           </div>
         </div>
-      </div><!-- /.container-fluid -->
-    </section>
+        <!-- SidebarSearch Form -->
+        <div class="form-inline">
+          <div class="input-group" data-widget="sidebar-search">
+            <input class="form-control form-control-sidebar" type="search" placeholder="Search" aria-label="Search" />
+            <div class="input-group-append">
+              <button class="btn btn-sidebar">
+                <i class="fas fa-search fa-fw"></i>
+              </button>
+            </div>
+          </div>
+        </div>
 
-    <!-- Main content -->
-    <section class="content">
+        <!-- Sidebar Menu -->
+        <nav id="sidebar" class="mt-2">
+        </nav>
+        <!-- /.sidebar-menu -->
+      </div>
+    </aside>
+    <!-- Font Awesome --><!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script>
+      $("#sidebar").load("/include/sidebar.html");
+    </script>
+    <script src="/dist/js/demo.js"></script>
+    <!-- /.sidebar -->
 
-      <!-- Default box -->
-      <div class="card" hidden>
-        <div class="card-header">
-          <h3 class="card-title">Danh sách hãng</h3>
-          
-          <div class="card-tools">
-            <button type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">
-              <i class="fas fa-minus"></i>
-            </button>
+    <!-- Content Wrapper. Contains page content -->
+    <div class="content-wrapper">
+      <!-- Content Header (Page header) -->
+      <section class="content-header">
+        <div class="container-fluid">
+          <div class="row mb-2">
+            <div class="col-sm-6">
+              <h1>Danh mục hãng - xe</h1>
+            </div>
+            <div class="col-sm-6">
+              <ol class="breadcrumb float-sm-right">
+                <li class="breadcrumb-item"><a href="#">Home</a></li>
+                <li class="breadcrumb-item active">Danh mục hãng - xe</li>
+              </ol>
+            </div>
+          </div>
+        </div><!-- /.container-fluid -->
+      </section>
 
-            <!-- Remove card button -->
-            <!-- <button type="button" class="btn btn-tool" data-card-widget="remove" title="Remove">
+      <!-- Main content -->
+      <section class="content">
+
+        <!-- Default box -->
+        <div class="card" hidden>
+          <div class="card-header">
+            <h3 class="card-title">Danh sách hãng</h3>
+
+            <div class="card-tools">
+              <button type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">
+                <i class="fas fa-minus"></i>
+              </button>
+
+              <!-- Remove card button -->
+              <!-- <button type="button" class="btn btn-tool" data-card-widget="remove" title="Remove">
               <i class="fas fa-times"></i>
             </button> -->
+            </div>
           </div>
+          <div class="card-body">
+            Copy this page and start creating your interface!
+          </div>
+          <!-- /.card-body -->
+          <div class="card-footer">
+            Footer
+          </div>
+          <!-- /.card-footer-->
         </div>
-        <div class="card-body">
-          Copy this page and start creating your interface!
-        </div>
-        <!-- /.card-body -->
-        <div class="card-footer">
-          Footer
-        </div>
-        <!-- /.card-footer-->
-      </div>
-      <!-- /.card -->
+        <!-- /.card -->
 
-      <div class="container-fluid"></div>
+        <div class="container-fluid"></div>
         <div class="row">
           <div class="col-12">
-            
+
             <div id="data-table-card" class="card">
               <div class="card-header d-flex align-items-center">
                 <h3 class="card-title">Danh sách hãng - mẫu xe</h3>
@@ -122,7 +155,8 @@
                   <i class="fa-solid fa-plus"></i> Thêm mẫu
                 </button>
                 <div class="ml-auto card-tools">
-                  <button id="tableCollapseBtn" type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">
+                  <button id="tableCollapseBtn" type="button" class="btn btn-tool" data-card-widget="collapse"
+                    title="Collapse">
                     <i class="fas fa-minus"></i>
                   </button>
                 </div>
@@ -131,21 +165,21 @@
               <div class="card-body">
                 <table id="data-table" class="table table-bordered table-striped">
                   <thead>
-                  <tr>
-                    <th scope="col" style="text-align: center" width="10%">#</th>
-                    <th scope="col" style="text-align: center" width="30%">Hãng xe</th>
-                    <th scope="col" style="text-align: center">Mẫu xe</th>
-                    <th scope="col" style="text-align: center" width="15%">Thao tác</th>
+                    <tr>
+                      <th scope="col" style="text-align: center" width="10%">#</th>
+                      <th scope="col" style="text-align: center" width="30%">Hãng xe</th>
+                      <th scope="col" style="text-align: center">Mẫu xe</th>
+                      <th scope="col" style="text-align: center" width="15%">Thao tác</th>
 
-                    <!-- <th>Rendering engine</th>
+                      <!-- <th>Rendering engine</th>
                     <th>Browser</th>
                     <th>Platform(s)</th>
                     <th>Engine version</th>
                     <th>CSS grade</th> -->
-                  </tr>
+                    </tr>
                   </thead>
                   <tbody>
-                  <!-- <tr>
+                    <!-- <tr>
                     <td>Trident</td>
                     <td>Internet
                       Explorer 4.0
@@ -182,8 +216,8 @@
           <!-- /.col -->
         </div>
         <!-- /.row -->
-      </div>
-      <!-- /.container-fluid -->
+    </div>
+    <!-- /.container-fluid -->
 
     </section>
     <!-- /.content -->
@@ -202,30 +236,32 @@
     <!-- Control sidebar content goes here -->
   </aside>
   <!-- /.control-sidebar -->
-</div>
-<!-- ./wrapper -->
+  </div>
+  <!-- ./wrapper -->
 
   <!-- AdminLTE App -->
   <script src="dist/js/adminlte.min.js"></script>
   <!-- SweetAlert2 -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<!-- Bootstrap 4 -->
-<script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-<!-- DataTables  & Plugins -->
-<script src="/plugins/datatables/jquery.dataTables.min.js"></script>
-<script src="/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
-<script src="/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
-<script src="/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
-<script src="/plugins/datatables-buttons/js/dataTables.buttons.min.js"></script>
-<script src="/plugins/datatables-buttons/js/buttons.bootstrap4.min.js"></script>
-<script src="/plugins/jszip/jszip.min.js"></script>
-<script src="/plugins/pdfmake/pdfmake.min.js"></script>
-<script src="/plugins/pdfmake/vfs_fonts.js"></script>
-<script src="/plugins/datatables-buttons/js/buttons.html5.min.js"></script>
-<script src="/plugins/datatables-buttons/js/buttons.print.min.js"></script>
-<script src="/plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
-<!-- AdminLTE for demo purposes -->
-<!-- <script src="dist/js/demo.js"></script> -->
-<script type="module" src="dist/js/pages/brand-model-management.js"></script>
+  <!-- Bootstrap 4 -->
+  <script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- DataTables  & Plugins -->
+  <script src="/plugins/datatables/jquery.dataTables.min.js"></script>
+  <script src="/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
+  <script src="/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
+  <script src="/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
+  <script src="/plugins/datatables-buttons/js/dataTables.buttons.min.js"></script>
+  <script src="/plugins/datatables-buttons/js/buttons.bootstrap4.min.js"></script>
+  <script src="/plugins/jszip/jszip.min.js"></script>
+  <script src="/plugins/pdfmake/pdfmake.min.js"></script>
+  <script src="/plugins/pdfmake/vfs_fonts.js"></script>
+  <script src="/plugins/datatables-buttons/js/buttons.html5.min.js"></script>
+  <script src="/plugins/datatables-buttons/js/buttons.print.min.js"></script>
+  <script src="/plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
+  <!-- AdminLTE for demo purposes -->
+  <!-- <script src="dist/js/demo.js"></script> -->
+  <script type="module" src="dist/js/pages/brand-model-management.js"></script>
+  <script src="/dist/js/demo.js"></script>
 </body>
+
 </html>
