--- a/src/main/resources/templates/include/sidebar.html
+++ b/src/main/resources/templates/include/sidebar.html
@@ -15,21 +15,21 @@
 
         <li class="nav-item">
           <a href="#" class="nav-link" id="category-management">
-            <i class="fa-solid fa-gears"></i>
+            <i class="nav-icon fa-solid fa-gears"></i>
             <p>
               Quản lý danh mục
               <i class="fas fa-angle-left right"></i>
               <!-- <span class="badge badge-info right">6</span> Hiển thị số lượng thông báo-->
             </p>
           </a>
-          <ul class="nav nav-treeview pl-2">
+          <ul class="nav nav-treeview pl-2 sidebar-ul">
             <li class="nav-item">
               <a
                 href="../brand-model-management.html"
                 class="nav-link"
                 id="category-management_brand-model-management"
               >
-              <i class="fa-solid fa-database"></i>
+              <i class="nav-icon fa-solid fa-database"></i>
                 <p>Danh mục mẫu xe</p>
               </a>
             </li>
