--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -88,7 +88,7 @@
 
       });
     </script>
-    <script src="/dist/js/demo.js"></script>
+    <!-- <script src="/dist/js/demo.js"></script> -->
     <!-- /.sidebar -->
 
 
