login/logout function

--- a/src/main/resources/templates/include/navbar.html
+++ b/src/main/resources/templates/include/navbar.html
@@ -1,3 +1,6 @@
+<!-- Font Awesome Icons -->
+<link rel="stylesheet" href="/plugins/fontawesome-free/css/all.min.css" />
+
     <!-- Left navbar links -->
     <ul class="navbar-nav">
       <li class="nav-item">
@@ -120,7 +123,9 @@ Message End
           <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
         </div>
       </li> -->
-      
+      <li id="login-out-btn" class="nav-item"></li>
+
+      </li>
       <li class="nav-item">
         <a class="nav-link" data-widget="fullscreen" href="#" role="button">
           <i class="fas fa-expand-arrows-alt"></i>
@@ -132,4 +137,8 @@ Message End
         </a>
       </li>
     </ul>
-    <script src="/include/navbar.js"></script>
+    
+    <!-- SweetAlert2 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="/include/navbar.js"></script>
