--- a/src/main/resources/templates/brand-model-management.html
+++ b/src/main/resources/templates/brand-model-management.html
@@ -160,10 +160,10 @@
             <div id="data-table-card" class="card">
               <div class="card-header d-flex align-items-center">
                 <h3 class="card-title">Danh sách hãng - mẫu xe</h3>
-                <button class="btn btn-success btn-xs ms-auto ml-2" id="themvaitro_btn">
+                <button class="btn btn-success btn-sm ms-auto ml-2" id="newBrand_btn">
                   <i class="fa-solid fa-plus"></i> Thêm hãng
                 </button>
-                <button class="btn btn-success btn-xs ms-auto ml-2" id="themvaitro_btn">
+                <button class="btn btn-warning btn-sm ms-auto ml-2" id="newModel_btn">
                   <i class="fa-solid fa-plus"></i> Thêm mẫu
                 </button>
                 <div class="ml-auto card-tools">
@@ -263,8 +263,6 @@
     src="/plugins/select2/js/select2.min.js"
     defer
   ></script>
-  <!-- SweetAlert2 -->
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <!-- Bootstrap 4 -->
   <script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
   <!-- DataTables  & Plugins -->
