--- a/src/main/resources/templates/include/sidebar.html
+++ b/src/main/resources/templates/include/sidebar.html
@@ -25,12 +25,18 @@
           <ul class="nav nav-treeview pl-2 sidebar-ul">
             <li class="nav-item">
               <a
-                href="../brand-model-management.html"
+                href="/brand-model-management.html"
                 class="nav-link"
                 id="category-management_brand-model-management"
               >
               <i class="nav-icon fa-solid fa-database"></i>
                 <p>Danh mục mẫu xe</p>
+              </a>
+            </li>
+            <li class="nav-item" data-toggle="tooltip" data-placement="bottom" title="Do not edit, copy this to build new page">
+              <a href="/blank.html" class="nav-link">
+                <i class="nav-icon fa-solid fa-laptop-code fa-flip"></i>
+                <p>Blank page</p>
               </a>
             </li>
             <li class="nav-item">
@@ -654,4 +660,4 @@
         </li>
       </ul>
       
-<script src="/include/sidebar.js"></script>
+<script type="module" src="/include/sidebar.js"></script>
