complete function new brand, new car model

--- a/src/main/resources/templates/blank.html
+++ b/src/main/resources/templates/blank.html
@@ -139,6 +139,6 @@
   <!-- ChartJS -->
   <script src="plugins/chart.js/Chart.min.js"></script>
 
-  <script src="/dist/js/demo.js"></script>
+  <script src="/dist/js/demo.js" defer></script>
 </body>
 </html>
