--- a/src/main/resources/templates/include/sidebar.html
+++ b/src/main/resources/templates/include/sidebar.html
@@ -55,7 +55,7 @@
           <ul class="nav nav-treeview pl-2 sidebar-ul">
             <li class="nav-item">
               <a
-                href="/brand-model-management.html"
+                href="/brand-model-management"
                 class="nav-link"
                 id="category-management_brand-model-management"
               >
